_mocha/korea_friendly_2026/chart/resource/service.yml
apiVersion: v1
kind: Service
metadata:
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /
    alb.ingress.kubernetes.io/healthcheck-port: "8080"
    alb.ingress.kubernetes.io/success-codes: "200"
    alb.ingress.kubernetes.io/target-group-attributes: deregistration_delay.timeout_seconds=60
  name: chart
  namespace: app
spec:
  selector:
    app: chart
  type: ClusterIP
  ports:
  - name: chart
    protocol: TCP
    port: 8080
    targetPort: 8080
